fix issue where opt not working on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -104,6 +104,7 @@
 @media screen and (max-width: 767px) {
   .sidebar {
     width: 100%;
+    min-height: auto;
     height: auto;
   }
   .content {
